--- a/style/index.css
+++ b/style/index.css
@@ -11,7 +11,7 @@ header {
   position: relative;
   align-content: stretch;
   background-color: #113459;
-  height: 20vh;
+  height: 15vh;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -56,6 +56,7 @@ nav ul li a {
   display: flex;
   flex-flow: wrap row;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 h1 {
@@ -63,12 +64,14 @@ h1 {
   color: white;
   font-size: 3vw;
   margin-top: 2vh;
-color:white;}
+  color: white;
+}
 
 /* main*/
 main {
+  font-size: 13px;
   background-color: #76d7ef;
-  height: 70vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -79,7 +82,9 @@ main {
 }
 
 
-.add input, .add select, .add button{
+.add input,
+.add select,
+.add button {
   width: 100%;
   height: 80%;
   text-align: center;
@@ -136,23 +141,26 @@ tbody tr:nth-of-type(even) {
 }
 
 table tr td {
-  padding:0;  
+  padding: 0;
 }
+
 table tr th:nth-child(1) {
-  width:50%;
+  width: 50%;
 }
+
 table tr th:nth-child(2) {
-  width:30%;
+  width: 30%;
 }
+
 table tr th:nth-child(3) {
-  width:20%;
+  width: 20%;
 }
 
 
 /* footer */
 
 footer {
-  color:white;
+  color: white;
   background-color: #113459;
   height: 10vh;
   position: relative;
